--- a/front/signUp/signUp.html
+++ b/front/signUp/signUp.html
@@ -22,7 +22,7 @@
                         Sign up
                     </span>
                     <span>
-                        Don't have an account? <a href="../signIn/signIn.html" class="blue">Log in</a>
+                        Do you have an account? <a href="../signIn/signIn.html" class="blue">SignIn</a>
                     </span>
                 </div>
                 <form>
