--- a/front/aboutUs/aboutUs.html
+++ b/front/aboutUs/aboutUs.html
@@ -38,10 +38,10 @@
     <nav class="flex items-center gap-8 text-gray-700 font-semibold">
       <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer home">Home</span>
       <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer menu">Menu</span>
-      <span class="text-[#FF8A00] transition transform duration-300 cursor-pointer hover:animate-cool">About us</span>      
-      <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer">Order online</span>
-      <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer">Reservation</span>
-      <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer">Contact us</span>
+      <span class="text-[#FF8A00] transition transform duration-300 cursor-pointer hover:animate-cool aboutUs">About us</span>      
+      <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer orderOnline">Order online</span>
+      <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer reservation">Reservation</span>
+      <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer contactUs">Contact us</span>
     </nav>
     
     <div class="flex items-center gap-4">
