--- a/front/aboutUs/aboutUs.html
+++ b/front/aboutUs/aboutUs.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,81 +8,133 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="./aboutUs.js" defer></script>
   <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../aboutUs/style.css">
+
   <style>
+    @font-face {
+      font-family: "Roleway-Bold";
+      src: url(../font/Roleway/Raleway-Bold.ttf);
+    }
+
+    @font-face {
+      font-family: "Roleway-Regular";
+      src: url(../font/Roleway/Raleway-Regular.ttf);
+    }
+
+    @font-face {
+      font-family: "Poppins-Regular";
+      src: url(../font/Poppins/Poppins-Regular.ttf);
+    }
+
+    @font-face {
+      font-family: "Poppins-Medium";
+      src: url(../font/Poppins/Poppins-Medium.ttf);
+    }
+
+    @font-face {
+      font-family: "Poppins-SemiBold";
+      src: url(../font/Poppins/Poppins-SemiBold.ttf);
+    }
+
+    @font-face {
+      font-family: "Tinos-Bold";
+      src: url(../font/Tinos/Tinos-Bold.ttf);
+    }
+
+    @font-face {
+    font-family: "Poppins-LightItalic";
+    src: url(../font/Poppins/Poppins-LightItalic.ttf);
+    }
+
     @keyframes coolHoverAnimation {
       0% {
         transform: scale(1);
       }
+
       50% {
         transform: scale(1.1) rotate(5deg);
       }
+
       100% {
         transform: scale(1) rotate(0deg);
       }
     }
+
     .hover\:animate-cool:hover {
       animation: coolHoverAnimation 0.5s ease-out forwards;
     }
   </style>
 </head>
-<body class="bg-gray-100">
+
+<body class="bg-white-100">
 
   <!-- Header -->
-  <header class="flex items-center justify-between px-10 py-8 bg-white shadow">
-    <div class="flex items-center space-x-4">
-      <div class="p-2">
-        <img class="w-10 h-10" src="../img/svg/Logo%20Delizioso.svg" alt="logo">
+  <div class="container">
+    <div class="header">
+      <div class="logo">
+        <img src="../img/svg/LogoDeliziosoFull.svg" alt="">
       </div>
-      <span class="text-xl font-bold">Delizi</span>
-      <span class="font-bold text-[#FF8A00] text-xl">oso</span>
-    </div>
-    <nav class="flex items-center gap-8 text-gray-700 font-semibold">
-      <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer home">Home</span>
-      <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer menu">Menu</span>
-      <span class="text-[#FF8A00] transition transform duration-300 cursor-pointer hover:animate-cool">About us</span>      
-      <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer">Order online</span>
-      <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer">Reservation</span>
-      <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer">Contact us</span>
-    </nav>
-    
-    <div class="flex items-center gap-4">
-      <div class="rounded-full bg-gray-100 p-2 cursor-pointer hover:bg-gray-200 transition">
-        <img class="w-8" src="../img/svg/Cart.svg" alt="cart">
+      <nav class="flex items-center gap-8 text-gray-700 font-semibold">
+        <span
+          class="text-[#FF8A00] transition transform duration-300 hover:text-[#FF8A00] hover:animate-cool  home">Home</span>
+        <span
+          class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer goMenu">Menu</span>
+        <span class="transition transform duration-300 cursor-pointer hover:scale-105 cursor-pointer aboutUs">About
+          us</span>
+        <span
+          class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer orderOnline">Order
+          online</span>
+        <span
+          class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer reservation">Reservation</span>
+        <span
+          class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer contactUs">Contact
+          us</span>
+      </nav>
+      <div class="leftGroup">
+        <div class="cart">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M5.5 5.92H19.7558C20.3947 5.92 20.8698 6.51108 20.7324 7.13511L19.6915 11.8604C19.2876 13.6941 17.6628 15 15.7852 15H9.54507C8.07693 15 6.82447 13.9375 6.58518 12.489L5.5 5.92ZM5.5 5.92L4.96302 4.35201C4.68606 3.54329 3.92573 3 3.0709 3H3"
+              stroke-width="1.5" stroke-linecap="round" />
+            <path d="M18 18H7.5C6.67157 18 6 17.3284 6 16.5V16.5C6 15.6716 6.67157 15 7.5 15H10" stroke-width="1.5"
+              stroke-linecap="round" />
+            <circle cx="8" cy="20" r="1.25" stroke-width="1.5" />
+            <circle cx="16" cy="20" r="1.25" stroke-width="1.5" />
+          </svg>
+        </div>
+        <div class="logInbtnHome">
+          <span>Log in</span>
+        </div>
       </div>
-      <button class="bg-green-500 rounded-full px-10 py-3 text-white hover:bg-green-600 transition">
-        Log in
-      </button>
-      <button class="bg-[#FF8A00] rounded-full px-6 py-3 text-white cursor-pointer admin">
-        Admin Panel
-      </button>
     </div>
-  </header>
+  </div>
 
-  <main class="mt-20 max-w-6xl mx-auto px-6">
-
-    <section class="flex flex-col md:flex-row items-center my-16">
+  <main class=" ">
+    <div class="container">
+    <section class="ourRes flex flex-col md:flex-row items-center ">
       <div class="relative w-1/2">
         <div class="">
           <img src="../img/svg/aboutus1.svg" alt="Chef cooking" class="w-full h-full object-cover">
         </div>
       </div>
       <div class="md:w-1/2 mt-6 md:mt-0 md:pl-12">
-        <h2 class="text-4xl font-bold font-['Tinos']">
-          <span class="text-orange-500">Our
-
-          </span> <span>restaurant</span>
+        <h2 class="title text-4xl font-bold font-['Tinos']">
+          <span class="text-orange-500">Our<br><span >restautant</span></span>
         </h2>
-        <p class="mt-4 text-gray-700 border-l-4 border-green-500 pl-4 font-['Poppins']">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        <p class="desc mt-4 text-gray-700 font-['Poppins']">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+Duis aute irure dolor in reprehenderit in voluptate velit esse.
         </p>
       </div>
     </section>
-
-
-    <section class="flex flex-col md:flex-row items-center my-16">
-      <div class="md:w-1/2 md:pr-12">
-        <p class="text-gray-700 font-['Poppins'] border-r-4 border-green-500 pl-4">
-            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+  </div>
+    <div class="container">
+    <section class="ourResSec flex flex-col md:flex-row items-center">
+      <div class="Desc md:pr-12">
+        <p class="desc text-gray-700 font-['Poppins']">
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+          aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+          Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
         </p>
       </div>
       <div class="relative w-1/2 mt-6 md:mt-0">
@@ -90,83 +143,87 @@
         </div>
       </div>
     </section>
+    </div>
 
 
-    <section class="flex flex-col md:flex-row items-center p-8 rounded-lg">
-      <div class="">
+    <div class="container">
+    <section class="Chef">
+      <div class="imgg">
         <img src="../img/svg/aboutus3.svg" alt="Chef Ismail Marzuki" class="w-full h-full object-cover">
       </div>
-      <div class="md:ml-8 mt-6 md:mt-0 font-[]">
-        <h3 class="text-5xl font-bold font-['Tinos']">
-          <span class="text-orange-500">Owner</span> & Executive Chef
+      <div class="groupText ">
+        <h3 class="title text-5xl font-bold font-['Tinos']">
+          <span>Owner <div>&<br>Executive Chef</div></span>
         </h3>
-        <p class="text-2xl font-semibold mt-2">Ismail Marzuki</p>
-        <p class="mt-4 text-gray-700 font-['Poppins'] border-l-4 border-green-500 pl-4">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        <p class="name">Ismail Marzuki</p>
+        <p class="words ">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua.
         </p>
       </div>
     </section>
-
+  </div>
   </main>
   <footer class="footer">
     <div class="together">
-        <div class="firstGroup">
-            <div class="logo">
-                <img src="../img/svg/LogoDeliziosoWhite.svg" alt="">
-            </div>
-            <div class="desc">
-                Viverra gravida morbi egestas facilisis tortor netus non duis tempor. 
-            </div>
-            <div class="social">
-                <div class="twitter">
-                    <img src="../img/svg/twitter.svg" alt="">
-                    </div>
-                <div class="inst">
-                    <img src="../img/svg/instagram.svg" alt="">     
-                </div>
-                <div class="Fakebo">
-                    <img src="../img/svg/facebook.svg" alt="">                         
-                </div>
-            </div>
+      <div class="firstGroup">
+        <div class="logo">
+          <img src="../img/svg/LogoDeliziosoWhite.svg" alt="">
         </div>
-        <div class="SecondGroup">
-            <div class="groupText">
-                <div class="title">Page</div>
-                <div class="group">
-                    <span>Home</span>
-                    <span>Menu</span>
-                    <span>Order online</span>
-                    <span>Catering</span>
-                    <span>Reservation</span>
-                </div>
-            </div>
-            <div class="groupText">
-                <div class="title">Information</div>
-                <div class="group">
-                    <span>About us</span>
-                    <span>Testimonial</span>
-                    <span>Event</span>
-                </div>
-            </div>
-            <div class="groupText">
-                <div class="title">Get in touch</div>
-                <div class="group">
-                    <span>3247 Johnson Ave, Bronx, NY<br>10463, Amerika Serikat</span>
-                    <span>delizioso@gmail.com</span>
-                    <span>+123 4567 8901</span>
-                    <span>Catering</span>
-                    <span>Reservation</span>
-                </div>
-            </div>
+        <div class="desc">
+          Viverra gravida morbi egestas facilisis tortor netus non duis tempor.
         </div>
+        <div class="social">
+          <div class="twitter">
+            <img src="../img/svg/twitter.svg" alt="">
+          </div>
+          <div class="inst">
+            <img src="../img/svg/instagram.svg" alt="">
+          </div>
+          <div class="Fakebo">
+            <img src="../img/svg/facebook.svg" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="SecondGroup">
+        <div class="groupText">
+          <div class="title">Page</div>
+          <div class="group">
+            <span>Home</span>
+            <span>Menu</span>
+            <span>Order online</span>
+            <span>Catering</span>
+            <span>Reservation</span>
+          </div>
+        </div>
+        <div class="groupText">
+          <div class="title">Information</div>
+          <div class="group">
+            <span>About us</span>
+            <span>Testimonial</span>
+            <span>Event</span>
+          </div>
+        </div>
+        <div class="groupText">
+          <div class="title">Get in touch</div>
+          <div class="group">
+            <span>3247 Johnson Ave, Bronx, NY<br>10463, Amerika Serikat</span>
+            <span>delizioso@gmail.com</span>
+            <span>+123 4567 8901</span>
+            <span>Catering</span>
+            <span>Reservation</span>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="TherdGroup">
-        <span>Copyright</span>
-        <div class="imgC">
-            <img src="../img/svg/Icon.svg" alt="">
-        </div>
-        <span>2022 Delizioso</span>
+      <span>Copyright</span>
+      <div class="imgC">
+        <img src="../img/svg/Icon.svg" alt="">
+      </div>
+      <span>2022 Delizioso</span>
     </div>
-</footer>
+  </footer>
 </body>
+
 </html>
