--- a/front/reservation/reservation.html
+++ b/front/reservation/reservation.html
@@ -8,7 +8,42 @@
     <script src="./reservation.js" defer></script>
     <link rel="stylesheet" href="../style.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" href="./style.css">
     <style>
+        @font-face {
+    font-family: "Roleway-Bold";
+    src: url(../font/Roleway/Raleway-Bold.ttf);
+}
+
+@font-face {
+    font-family: "Roleway-Regular";
+    src: url(../font/Roleway/Raleway-Regular.ttf);
+}
+
+@font-face {
+    font-family: "Poppins-Regular";
+    src: url(../font/Poppins/Poppins-Regular.ttf);
+}
+
+@font-face {
+    font-family: "Poppins-Medium";
+    src: url(../font/Poppins/Poppins-Medium.ttf);
+}
+
+@font-face {
+    font-family: "Poppins-SemiBold";
+    src: url(../font/Poppins/Poppins-SemiBold.ttf);
+}
+
+@font-face {
+    font-family: "Poppins-LightItalic";
+    src: url(../font/Poppins/Poppins-LightItalic.ttf);
+}
+
+@font-face {
+    font-family: "Tinos-Bold";
+    src: url(../font/Tinos/Tinos-Bold.ttf);
+}
         @keyframes coolHoverAnimation {
             0% { transform: scale(1); }
             50% { transform: scale(1.1) rotate(5deg); }
@@ -18,52 +53,54 @@
     </style>
 </head>
 <body class="bg-white">
-    <header class="flex items-center justify-between px-10 py-8 bg-white shadow">
-        <div class="flex items-center space-x-4">
-          <div class="p-2">
-            <img class="w-10 h-10" src="../img/svg/Logo%20Delizioso.svg" alt="logo">
-          </div>
-          <span class="text-xl font-bold">Delizi</span>
-          <span class="font-bold text-[#FF8A00] text-xl">oso</span>
+    <div class="container">
+        <div class="header">
+            <div class="logo">
+                <img src="../img/svg/LogoDeliziosoFull.svg" alt="">
+            </div>
+            <nav class="flex items-center gap-8 text-gray-700 font-semibold">
+                <span class="text-[#FF8A00] transition transform duration-300 hover:text-[#FF8A00] hover:animate-cool  home">Home</span>
+                <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer goMenu">Menu</span>
+                <span class="transition transform duration-300 cursor-pointer hover:scale-105 cursor-pointer aboutUs">About us</span>      
+                <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer orderOnline">Order online</span>
+                <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer reservation">Reservation</span>
+                <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer contactUs">Contact us</span>
+              </nav>
+            <div class="leftGroup">
+                <div class="cart">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M5.5 5.92H19.7558C20.3947 5.92 20.8698 6.51108 20.7324 7.13511L19.6915 11.8604C19.2876 13.6941 17.6628 15 15.7852 15H9.54507C8.07693 15 6.82447 13.9375 6.58518 12.489L5.5 5.92ZM5.5 5.92L4.96302 4.35201C4.68606 3.54329 3.92573 3 3.0709 3H3"  stroke-width="1.5" stroke-linecap="round"/>
+                        <path d="M18 18H7.5C6.67157 18 6 17.3284 6 16.5V16.5C6 15.6716 6.67157 15 7.5 15H10"  stroke-width="1.5" stroke-linecap="round"/>
+                        <circle cx="8" cy="20" r="1.25"  stroke-width="1.5"/>
+                        <circle cx="16" cy="20" r="1.25"  stroke-width="1.5"/>
+                        </svg>
+                </div>
+                <div class="logInbtnHome">
+                    <span>Log in</span>
+                    <span>Admin Panel</span>
+                </div>
+            </div>
         </div>
-        <nav class="flex items-center gap-8 text-gray-700 font-semibold">
-          <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer home">Home</span>
-          <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer menu">Menu</span>
-          <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer aboutUs">About us</span>      
-          <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer orderOnline">Order online</span>
-          <span class="text-[#FF8A00] transition transform duration-300  cursor-pointer hover:animate-cool reservation">Reservation</span>
-          <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer contactUs">Contact us</span>
-        </nav>
-        
-        <div class="flex items-center gap-4">
-          <div class="rounded-full bg-gray-100 p-2 cursor-pointer hover:bg-gray-200 transition">
-            <img class="w-8" src="../img/svg/Cart.svg" alt="cart">
-          </div>
-          <button class="bg-green-500 rounded-full px-10 py-3 text-white hover:bg-green-600 transition">
-            Log in
-          </button>
-          <button class="bg-[#FF8A00] rounded-full px-6 py-3 text-white cursor-pointer admin">
-            Admin Panel
-          </button>
-        </div>
-      </header>
+    </div>
 
-    <section class="flex justify-center items-center py-12 px-4">
-        <div class="grid grid-cols-2 gap-12 max-w-4xl w-full">
-            <div class="relative flex justify-center">
-                <img src="../img/svg/reservation.svg" alt="Table setup" class="w-[350px] h-[350px] rounded-full object-cover">
+    <div class="container">
+        <section class="onlyOne">
+            <div class="block">
+                <div class="imagee">
+                    <img src="../img/png/reserve.png" alt="Table setup" class="">
+                </div>
+                <div class="Second">
+                    <h1 class="title text-3xl font-bold mb-6">Book a table</h1>
+                    <form id="reservationForm" class="space-y-4">
+                        <input id="reservationDate" type="text" placeholder="Date" required class="w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-orange-500">
+                        <input id="reservationTime" type="text" placeholder="Time" required class="w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-orange-500">
+                        <input id="partySize" type="number" placeholder="Party size (up to 20)" required min="1" class="w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-orange-500">
+                        <button id="bookButton" type="submit" class="">Book now</button>
+                    </form>
+                </div>
             </div>
-            <div class="bg-white shadow-lg rounded-xl p-8 max-w-md w-full text-center">
-                <h1 class="text-3xl font-bold mb-6">Забронировать столик</h1>
-                <form id="reservationForm" class="space-y-4">
-                    <input id="reservationDate" type="text" placeholder="Напишите дату" required class="w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-orange-500">
-                    <input id="reservationTime" type="text" placeholder="Напишите время" required class="w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-orange-500">
-                    <input id="partySize" type="number" placeholder="Количество гостей (до 20)" required min="1" class="w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-orange-500">
-                    <button id="bookButton" type="submit" class="w-full bg-orange-500 hover:bg-orange-600 text-white py-3 rounded-md font-semibold transition">Забронировать</button>
-                </form>
-            </div>
-        </div>
-    </section>
+        </section>
+    </div>
     <footer class="footer">
         <div class="together">
             <div class="firstGroup">
