--- a/front/aboutUs/aboutUs.html
+++ b/front/aboutUs/aboutUs.html
@@ -76,10 +76,10 @@
       </div>
       <nav class="flex items-center gap-8 text-gray-700 font-semibold">
         <span
-          class="text-[#FF8A00] transition transform duration-300 hover:text-[#FF8A00] hover:animate-cool  home">Home</span>
+          class=" transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer  home">Home</span>
         <span
           class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer goMenu">Menu</span>
-        <span class="transition transform duration-300 cursor-pointer hover:scale-105 cursor-pointer aboutUs">About
+        <span class="text-[#FF8A00] transition transform duration-300 cursor-pointer  cursor-pointer hover:animate-cool aboutUs">About
           us</span>
         <span
           class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer orderOnline">Order
@@ -119,7 +119,7 @@
       </div>
       <div class="md:w-1/2 mt-6 md:mt-0 md:pl-12">
         <h2 class="title text-4xl font-bold font-['Tinos']">
-          <span class="text-orange-500">Our<br><span >restautant</span></span>
+          <span class="text-orange-500">Our<br><span >restaurant</span></span>
         </h2>
         <p class="desc mt-4 text-gray-700 font-['Poppins']">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
