--- a/front/reservation/reservation.html
+++ b/front/reservation/reservation.html
@@ -100,6 +100,50 @@
                 </div>
             </div>
         </section>
+        <div class="modalFirstResv">
+            <div class="head">
+                <div class="logo">
+                    <img src="../img/svg/LogoDeliziosoFull.svg" alt="">
+                </div>
+                <div class="groupBtn">
+                    <div class="span">
+                        Sign in
+                    </div>
+                    <div class="span">
+                        Sign up
+                    </div>
+                </div>
+            </div>
+            <div class="detail">
+                <div class="imagge">
+                    <img src="../img/png/reserve2.png" alt="">
+                </div>
+                <div class="title">Reservation detail</div>
+                <div class="groupDetail">
+                    <div class="item">
+                        <div class="img">
+                            <img src="../img/svg/Icon calender.svg" alt="">
+                        </div>
+                        <span>Saturday, 28 february 2022</span>
+                    </div>
+                    <div class="item">
+                        <div class="img">
+                            <img src="../img/svg/Icon Time.svg" alt="">
+                        </div>
+                        <span>04:30 pm</span>
+                    </div>
+                    <div class="item">
+                        <div class="img">
+                            <img src="../img/svg/icon people.svg" alt="">
+                        </div>
+                        <span>2 people (Standar seating)</span>
+                    </div>
+                </div>
+                <div class="info">
+                    <span>Due to limited availability, we can hold this table for you for 5:00 minutes</span>
+                </div>
+            </div>
+        </div>
     </div>
     <footer class="footer">
         <div class="together">
