--- a/front/reservation/reservation.html
+++ b/front/reservation/reservation.html
@@ -101,109 +101,135 @@
             </div>
         </section>
         <div class="modalFirstResv">
-            <div class="head">
-                <div class="logo">
-                    <img src="../img/svg/LogoDeliziosoFull.svg" alt="">
-                </div>
-                <div class="groupBtn">
-                    <div class="span">
-                        Sign in
+            <div class="group">
+                <div class="head">
+                    <div class="logo">
+                        <img src="../img/svg/LogoDeliziosoFull.svg" alt="">
                     </div>
-                    <div class="span">
-                        Sign up
-                    </div>
-                </div>
-            </div>
-            <div class="detail">
-                <div class="imagge">
-                    <img src="../img/png/reserve2.png" alt="">
-                </div>
-                <div class="title">Reservation detail</div>
-                <div class="groupDetail">
-                    <div class="item">
-                        <div class="img">
-                            <img src="../img/svg/Icon calender.svg" alt="">
+                    <div class="groupBtn">
+                        <div class="span">
+                            Sign in
                         </div>
-                        <span>Saturday, 28 february 2022</span>
-                    </div>
-                    <div class="item">
-                        <div class="img">
-                            <img src="../img/svg/Icon Time.svg" alt="">
+                        <div class="span">
+                            Sign up
                         </div>
-                        <span>04:30 pm</span>
-                    </div>
-                    <div class="item">
-                        <div class="img">
-                            <img src="../img/svg/icon people.svg" alt="">
-                        </div>
-                        <span>2 people (Standar seating)</span>
                     </div>
                 </div>
-                <div class="info">
-                    <span>Due to limited availability, we can hold this table for you for 5:00 minutes</span>
+                <div class="detail">
+                    <div class="imagge">
+                        <img src="../img/png/reserve2.png" alt="">
+                    </div>
+                    <div class="title">Reservation detail</div>
+                    <div class="groupDetail">
+                        <div class="item">
+                            <div class="img">
+                                <img src="../img/svg/Icon calender.svg" alt="">
+                            </div>
+                            <span>Saturday, 28 february 2022</span>
+                        </div>
+                        <div class="item">
+                            <div class="img">
+                                <img src="../img/svg/Icon Time.svg" alt="">
+                            </div>
+                            <span>04:30 pm</span>
+                        </div>
+                        <div class="item">
+                            <div class="img">
+                                <img src="../img/svg/icon people.svg" alt="">
+                            </div>
+                            <span>2 people (Standar seating)</span>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <span class="span">Due to limited availability, we can hold this table for you for <span>5:00 minutes</span></span>
+                    </div>
                 </div>
+                <div class="dataOrder">
+                    <div class="title">Data order</div>
+                    <form id="dataorder">
+                        <div class="first">
+                            <input type="text" placeholder="First name">
+                            <div class="country">
+                                <div class="imgCountry">
+                                    <img src="../img/svg/Flag.svg" alt="">
+                                </div>
+                            </div>
+                            <input type="number" placeholder="Phone number">
+                            <input type="text" placeholder="Select an accasion (optional)">
+                        </div>
+                        <div class="second">
+                            <input type="text" placeholder="Last name">
+                            <input type="text" placeholder="Email address">
+                            <input type="text" placeholder="Add a special request">
+                        </div>
+                    </form>
+                </div>
+                .
             </div>
         </div>
     </div>
-    <footer class="footer">
-        <div class="together">
-            <div class="firstGroup">
-                <div class="logo">
-                    <img src="../img/svg/LogoDeliziosoWhite.svg" alt="">
-                </div>
-                <div class="desc">
-                    Viverra gravida morbi egestas facilisis tortor netus non duis tempor. 
-                </div>
-                <div class="social">
-                    <div class="twitter">
-                        <img src="../img/svg/twitter.svg" alt="">
+    <div class="container">
+
+        <footer class="footer">
+            <div class="together">
+                <div class="firstGroup">
+                    <div class="logo">
+                        <img src="../img/svg/LogoDeliziosoWhite.svg" alt="">
+                    </div>
+                    <div class="desc">
+                        Viverra gravida morbi egestas facilisis tortor netus non duis tempor. 
+                    </div>
+                    <div class="social">
+                        <div class="twitter">
+                            <img src="../img/svg/twitter.svg" alt="">
+                            </div>
+                        <div class="inst">
+                            <img src="../img/svg/instagram.svg" alt="">     
                         </div>
-                    <div class="inst">
-                        <img src="../img/svg/instagram.svg" alt="">     
+                        <div class="Fakebo">
+                            <img src="../img/svg/facebook.svg" alt="">                         
+                        </div>
                     </div>
-                    <div class="Fakebo">
-                        <img src="../img/svg/facebook.svg" alt="">                         
+                </div>
+                <div class="SecondGroup">
+                    <div class="groupText">
+                        <div class="title">Page</div>
+                        <div class="group">
+                            <span>Home</span>
+                            <span>Menu</span>
+                            <span>Order online</span>
+                            <span>Catering</span>
+                            <span>Reservation</span>
+                        </div>
+                    </div>
+                    <div class="groupText">
+                        <div class="title">Information</div>
+                        <div class="group">
+                            <span>About us</span>
+                            <span>Testimonial</span>
+                            <span>Event</span>
+                        </div>
+                    </div>
+                    <div class="groupText">
+                        <div class="title">Get in touch</div>
+                        <div class="group">
+                            <span>3247 Johnson Ave, Bronx, NY<br>10463, Amerika Serikat</span>
+                            <span>delizioso@gmail.com</span>
+                            <span>+123 4567 8901</span>
+                            <span>Catering</span>
+                            <span>Reservation</span>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="SecondGroup">
-                <div class="groupText">
-                    <div class="title">Page</div>
-                    <div class="group">
-                        <span>Home</span>
-                        <span>Menu</span>
-                        <span>Order online</span>
-                        <span>Catering</span>
-                        <span>Reservation</span>
-                    </div>
+            <div class="TherdGroup">
+                <span>Copyright</span>
+                <div class="imgC">
+                    <img src="../img/svg/Icon.svg" alt="">
                 </div>
-                <div class="groupText">
-                    <div class="title">Information</div>
-                    <div class="group">
-                        <span>About us</span>
-                        <span>Testimonial</span>
-                        <span>Event</span>
-                    </div>
-                </div>
-                <div class="groupText">
-                    <div class="title">Get in touch</div>
-                    <div class="group">
-                        <span>3247 Johnson Ave, Bronx, NY<br>10463, Amerika Serikat</span>
-                        <span>delizioso@gmail.com</span>
-                        <span>+123 4567 8901</span>
-                        <span>Catering</span>
-                        <span>Reservation</span>
-                    </div>
-                </div>
+                <span>2022 Delizioso</span>
             </div>
-        </div>
-        <div class="TherdGroup">
-            <span>Copyright</span>
-            <div class="imgC">
-                <img src="../img/svg/Icon.svg" alt="">
-            </div>
-            <span>2022 Delizioso</span>
-        </div>
-    </footer>
+        </footer>
+    </div>
 </body>
 </html>
