--- a/front/reservation/reservation.html
+++ b/front/reservation/reservation.html
@@ -260,8 +260,10 @@
                 </div>
                 <div class="infoRest">
                     <div class="groupInpu">
-                        <input type="text" placeholder="Select an accasion (optional)">
-                        <input type="text" placeholder="Add a special request">
+                        <div class="arrowInput">
+                            <input type="text" placeholder="Select an accasion (optional)">
+                        </div>
+                        <label><input type="text" placeholder="Add a special request "></label>
                     </div>
                     <div class="groupText">
                         <div class="title">
