--- a/front/admin/admin.html
+++ b/front/admin/admin.html
@@ -52,11 +52,11 @@
       <form id="editDishForm" class="space-y-4">
         <input type="text" id="editDishName" placeholder="Dish Name" required class="w-full border rounded p-2">
         <textarea id="editDishDescription" placeholder="Description" required class="w-full border rounded p-2"></textarea>
-        <input type="number" id="editDishPrice" placeholder="Price" required class="w-full border rounded p-2">
+        <input type="number" id="editDishPrice" placeholder="Price"  class="w-full border rounded p-2">
         <input type="text" id="editDishImageUrl" placeholder="Image URL" required class="w-full border rounded p-2">
         <div class="flex justify-end space-x-2">
           <button id="saveEditDish" type="submit" class="bg-green-500 text-white px-4 py-2 rounded">Save</button>
-          <button type="button" id="cancelEdit" class="bg-gray-500 text-white px-4 py-2 rounded">Cancel</button>
+          <button type="button"  id="cancelEdit" class="cancelEdit bg-gray-500 text-white px-4 py-2 rounded">Cancel</button>
         </div>
       </form>
     </div>
