--- a/front/menu/menu.html
+++ b/front/menu/menu.html
@@ -25,9 +25,9 @@
     }
   </style>
 </head>
-<body class="bg-gray-50">
+<body class="bg-white">
 
-  <header class="flex items-center justify-between px-10 py-8 bg-white shadow">
+  <header class="flex items-center justify-between px-10 py-8 bg-white">
     <div class="flex items-center space-x-4">
       <div class="p-2">
         <img class="w-10 h-10" src="../img/svg/Logo%20Delizioso.svg" alt="logo">
@@ -83,8 +83,32 @@
         <div class="item">
           <div class="groupClosed">
             <div class="title">Spaghetti</div>
-            .
+            <div class="remove">
+              <img src="../img/svg/Remove.svg" alt="">
+            </div>
           </div>
+          <div class="groupCounts">
+            <div class="counts">
+              <div class="minus"><img src="../img/svg/minus.svg" alt=""></div>
+              <div class="countNum">2</div>
+              <div class="plus"><img src="../img/svg/plus.svg" alt=""></div>
+            </div>
+            <div class="price">$24.1</div>
+          </div>
+        </div>
+      </div>
+      <div class="endingOrder">
+        <div class="allPrice">
+          <div class="title">Subtotal</div>
+          <div class="price">$78.3</div>
+        </div>
+        <div class="ourMoney">
+          <div class="title">Tax fee</div>
+          <div class="price">$3.5</div>
+        </div>
+        <div class="endPrice">
+          <div class="title">Total</div>
+          <div class="price">$76.8</div>
         </div>
       </div>
     </div>
