--- a/front/admin/admin.html
+++ b/front/admin/admin.html
@@ -33,7 +33,17 @@
           <input type="text" id="dishPrice" placeholder="Price" required class="dishPrice w-full border rounded p-2">
           <textarea id="dishDescription" placeholder="Description" required class="dishDescription w-full border rounded p-2"></textarea>
           <input type="text" id="dishImageUrl" placeholder="Image URL" required class="dishImageUrl w-full border rounded p-2">
-
+          <div class="categories">
+            <div class="title">Categories</div>
+            <div class="groupCat">
+              <input type="checkbox" id="dinner" name="dinner" value="dinner">
+              <label for="veg">dinner</label>
+              <input type="checkbox" id="lanch" name="lanch" value="lanch">
+              <label for="lanch">lanch</label>
+              <input type="checkbox" id="drinks" name="drinks" value="drinks">
+              <label for="veg">drinks</label>
+            </div>
+          </div>
           <button type="submit" class="createDish w-full bg-[#FF8A00]  p-2 rounded">Add Dish</button>
         </form>
       </div>
