--- a/front/menu/menu.html
+++ b/front/menu/menu.html
@@ -80,7 +80,7 @@
         Order list
       </div>
       <div class="groupCards">
-        <div class="item">
+        <div class="itemCards">
           <div class="groupClosed">
             <div class="title">Spaghetti</div>
             <div class="remove">
