--- a/front/reservation/reservation.html
+++ b/front/reservation/reservation.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,47 +12,60 @@
     <link rel="stylesheet" href="./style.css">
     <style>
         @font-face {
-    font-family: "Roleway-Bold";
-    src: url(../font/Roleway/Raleway-Bold.ttf);
-}
-
-@font-face {
-    font-family: "Roleway-Regular";
-    src: url(../font/Roleway/Raleway-Regular.ttf);
-}
-
-@font-face {
-    font-family: "Poppins-Regular";
-    src: url(../font/Poppins/Poppins-Regular.ttf);
-}
-
-@font-face {
-    font-family: "Poppins-Medium";
-    src: url(../font/Poppins/Poppins-Medium.ttf);
-}
-
-@font-face {
-    font-family: "Poppins-SemiBold";
-    src: url(../font/Poppins/Poppins-SemiBold.ttf);
-}
-
-@font-face {
-    font-family: "Poppins-LightItalic";
-    src: url(../font/Poppins/Poppins-LightItalic.ttf);
-}
-
-@font-face {
-    font-family: "Tinos-Bold";
-    src: url(../font/Tinos/Tinos-Bold.ttf);
-}
-        @keyframes coolHoverAnimation {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.1) rotate(5deg); }
-            100% { transform: scale(1) rotate(0deg); }
+            font-family: "Roleway-Bold";
+            src: url(../font/Roleway/Raleway-Bold.ttf);
         }
-        .hover\:animate-cool:hover { animation: coolHoverAnimation 0.5s ease-out forwards; }
+
+        @font-face {
+            font-family: "Roleway-Regular";
+            src: url(../font/Roleway/Raleway-Regular.ttf);
+        }
+
+        @font-face {
+            font-family: "Poppins-Regular";
+            src: url(../font/Poppins/Poppins-Regular.ttf);
+        }
+
+        @font-face {
+            font-family: "Poppins-Medium";
+            src: url(../font/Poppins/Poppins-Medium.ttf);
+        }
+
+        @font-face {
+            font-family: "Poppins-SemiBold";
+            src: url(../font/Poppins/Poppins-SemiBold.ttf);
+        }
+
+        @font-face {
+            font-family: "Poppins-LightItalic";
+            src: url(../font/Poppins/Poppins-LightItalic.ttf);
+        }
+
+        @font-face {
+            font-family: "Tinos-Bold";
+            src: url(../font/Tinos/Tinos-Bold.ttf);
+        }
+
+        @keyframes coolHoverAnimation {
+            0% {
+                transform: scale(1);
+            }
+
+            50% {
+                transform: scale(1.1) rotate(5deg);
+            }
+
+            100% {
+                transform: scale(1) rotate(0deg);
+            }
+        }
+
+        .hover\:animate-cool:hover {
+            animation: coolHoverAnimation 0.5s ease-out forwards;
+        }
     </style>
 </head>
+
 <body class="bg-white">
     <div class="container">
         <div class="header">
@@ -59,21 +73,34 @@
                 <img src="../img/svg/LogoDeliziosoFull.svg" alt="">
             </div>
             <nav class="flex items-center gap-8 text-gray-700 font-semibold">
-                <span class="text-[#FF8A00] transition transform duration-300 hover:text-[#FF8A00] hover:animate-cool  home">Home</span>
-                <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer goMenu">Menu</span>
-                <span class="transition transform duration-300 cursor-pointer hover:scale-105 cursor-pointer aboutUs">About us</span>      
-                <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer orderOnline">Order online</span>
-                <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer reservation">Reservation</span>
-                <span class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer contactUs">Contact us</span>
-              </nav>
+                <span
+                    class="text-[#FF8A00] transition transform duration-300 hover:text-[#FF8A00] hover:animate-cool  home">Home</span>
+                <span
+                    class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer goMenu">Menu</span>
+                <span
+                    class="transition transform duration-300 cursor-pointer hover:scale-105 cursor-pointer aboutUs">About
+                    us</span>
+                <span
+                    class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer orderOnline">Order
+                    online</span>
+                <span
+                    class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer reservation">Reservation</span>
+                <span
+                    class="transition transform duration-300 hover:text-[#FF8A00] hover:scale-105 cursor-pointer contactUs">Contact
+                    us</span>
+            </nav>
             <div class="leftGroup">
                 <div class="cart">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M5.5 5.92H19.7558C20.3947 5.92 20.8698 6.51108 20.7324 7.13511L19.6915 11.8604C19.2876 13.6941 17.6628 15 15.7852 15H9.54507C8.07693 15 6.82447 13.9375 6.58518 12.489L5.5 5.92ZM5.5 5.92L4.96302 4.35201C4.68606 3.54329 3.92573 3 3.0709 3H3"  stroke-width="1.5" stroke-linecap="round"/>
-                        <path d="M18 18H7.5C6.67157 18 6 17.3284 6 16.5V16.5C6 15.6716 6.67157 15 7.5 15H10"  stroke-width="1.5" stroke-linecap="round"/>
-                        <circle cx="8" cy="20" r="1.25"  stroke-width="1.5"/>
-                        <circle cx="16" cy="20" r="1.25"  stroke-width="1.5"/>
-                        </svg>
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M5.5 5.92H19.7558C20.3947 5.92 20.8698 6.51108 20.7324 7.13511L19.6915 11.8604C19.2876 13.6941 17.6628 15 15.7852 15H9.54507C8.07693 15 6.82447 13.9375 6.58518 12.489L5.5 5.92ZM5.5 5.92L4.96302 4.35201C4.68606 3.54329 3.92573 3 3.0709 3H3"
+                            stroke-width="1.5" stroke-linecap="round" />
+                        <path d="M18 18H7.5C6.67157 18 6 17.3284 6 16.5V16.5C6 15.6716 6.67157 15 7.5 15H10"
+                            stroke-width="1.5" stroke-linecap="round" />
+                        <circle cx="8" cy="20" r="1.25" stroke-width="1.5" />
+                        <circle cx="16" cy="20" r="1.25" stroke-width="1.5" />
+                    </svg>
                 </div>
                 <div class="logInbtnHome">
                     <span>Log in</span>
@@ -92,10 +119,15 @@
                 <div class="Second">
                     <h1 class="title text-3xl font-bold mb-6">Book a table</h1>
                     <form id="reservationForm" class="space-y-4">
-                        <input id="reservationDate" type="text" placeholder="Date" required class="w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-orange-500">
-                        <input id="reservationTime" type="text" placeholder="Time" required class="w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-orange-500">
-                        <input id="partySize" type="number" placeholder="Party size (up to 20)" required min="1" class="w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-orange-500">
+
+                        <input id="" type="text" placeholder="Date" required
+                            class="reservationDate w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-orange-500">
+                        <input id="" type="text" placeholder="Time" required
+                            class="reservationTime w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-orange-500">
+                        <input id="" type="number" placeholder="Party size (up to 20)" required min="1"
+                            class="partySize w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-orange-500">
                         <button id="bookButton" type="submit" class="">Book now</button>
+
                     </form>
                 </div>
             </div>
@@ -125,23 +157,24 @@
                             <div class="img">
                                 <img src="../img/svg/Icon calender.svg" alt="">
                             </div>
-                            <span>Saturday, 28 february 2022</span>
+                            <span class="date">Saturday, 28 february 2022</span>
                         </div>
                         <div class="item">
                             <div class="img">
                                 <img src="../img/svg/Icon Time.svg" alt="">
                             </div>
-                            <span>04:30 pm</span>
+                            <span class="time">04:30 pm</span>
                         </div>
                         <div class="item">
                             <div class="img">
                                 <img src="../img/svg/icon people.svg" alt="">
                             </div>
-                            <span>2 people (Standar seating)</span>
+                            <span class="people">2 people (Standar seating)</span>
                         </div>
                     </div>
                     <div class="info">
-                        <span class="span">Due to limited availability, we can hold this table for you for <span>5:00 minutes</span></span>
+                        <span class="span">Due to limited availability, we can hold this table for you for <span>5:00
+                                minutes</span></span>
                     </div>
                 </div>
                 <div class="dataOrder">
@@ -177,17 +210,17 @@
                         <img src="../img/svg/LogoDeliziosoWhite.svg" alt="">
                     </div>
                     <div class="desc">
-                        Viverra gravida morbi egestas facilisis tortor netus non duis tempor. 
+                        Viverra gravida morbi egestas facilisis tortor netus non duis tempor.
                     </div>
                     <div class="social">
                         <div class="twitter">
                             <img src="../img/svg/twitter.svg" alt="">
-                            </div>
+                        </div>
                         <div class="inst">
-                            <img src="../img/svg/instagram.svg" alt="">     
+                            <img src="../img/svg/instagram.svg" alt="">
                         </div>
                         <div class="Fakebo">
-                            <img src="../img/svg/facebook.svg" alt="">                         
+                            <img src="../img/svg/facebook.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -232,4 +265,5 @@
         </footer>
     </div>
 </body>
+
 </html>
