--- a/front/admin/admin.html
+++ b/front/admin/admin.html
@@ -36,12 +36,12 @@
           <div class="categories">
             <div class="title">Categories</div>
             <div class="groupCat">
-              <input type="checkbox" id="dinner" name="dinner" value="dinner">
-              <label for="veg">dinner</label>
-              <input type="checkbox" id="lanch" name="lanch" value="lanch">
+              <input type="radio" id="dinner" name="dinner" value="dinner">
+              <label for="dinner">dinner</label>
+              <input type="radio" id="lanch" name="lanch" value="lanch">
               <label for="lanch">lanch</label>
-              <input type="checkbox" id="drinks" name="drinks" value="drinks">
-              <label for="veg">drinks</label>
+              <input type="radio" id="drinks" name="drinks" value="drinks">
+              <label for="drinks">drinks</label>
             </div>
           </div>
           <button type="submit" class="createDish w-full bg-[#FF8A00]  p-2 rounded">Add Dish</button>
