--- a/front/menu/menu.html
+++ b/front/menu/menu.html
@@ -89,9 +89,14 @@
           </div>
           <div class="groupCounts">
             <div class="counts">
-              <div class="minus"><img src="../img/svg/minus.svg" alt=""></div>
+              <div class="minus"><svg width="13" height="2" viewBox="0 0 13 2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0.634766 0.61969H11.4376" stroke-width="1.24648" stroke-linecap="round"/>
+                </svg></div>
               <div class="countNum">2</div>
-              <div class="plus"><img src="../img/svg/plus.svg" alt=""></div>
+              <div class="plus"><svg width="13" height="13" viewBox="0 0 13 13" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1.39648 6.61969H12.1993"  stroke-width="1.24648" stroke-linecap="round"/>
+                <path d="M6.79688 1.21832L6.79687 12.0211" stroke-width="1.24648" stroke-linecap="round"/>
+                </svg></div>
             </div>
             <div class="price">$24.1</div>
           </div>
