--- a/front/menu/menu.html
+++ b/front/menu/menu.html
@@ -84,7 +84,13 @@
           <div class="groupClosed">
             <div class="title">Spaghetti</div>
             <div class="remove">
-              <img src="../img/svg/Remove.svg" alt="">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path d="M6 6V18C6 19.6569 7.34315 21 9 21H15C16.6569 21 18 19.6569 18 18V6" stroke-width="1.5"/>
+                <path d="M10 3H14" stroke-width="1.5" stroke-linecap="round"/>
+                <path d="M10 10L10 17" stroke-width="1.5" stroke-linecap="round"/>
+                <path d="M14 10L14 17" stroke-width="1.5" stroke-linecap="round"/>
+                <path d="M4 6H20" stroke-width="1.5" stroke-linecap="round"/>
+                </svg>
             </div>
           </div>
           <div class="groupCounts">
@@ -115,6 +121,9 @@
           <div class="title">Total</div>
           <div class="price">$76.8</div>
         </div>
+      </div>
+      <div class="chekout">
+        Checkout
       </div>
     </div>
   </div>
