--- a/front/reservation/reservation.html
+++ b/front/reservation/reservation.html
@@ -126,7 +126,7 @@
                             class="reservationTime w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-orange-500">
                         <input id="" type="number" placeholder="Party size (up to 20)" required min="1"
                             class="partySize w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-orange-500">
-                        <button id="bookButton" type="submit" class="">Book now</button>
+                        <button id="bookButton" type="submit" class="bookButton">Book now</button>
 
                     </form>
                 </div>
@@ -181,14 +181,14 @@
                     <div class="title">Data order</div>
                     <form id="dataorder">
                         <div class="first">
-                            <input type="text" placeholder="First name">
+                            <input type="text" placeholder="First name" class="firstName">
                             <div class="country">
                                 <div class="imgCountry">
                                     <img src="../img/svg/Flag.svg" alt="">
                                 </div>
                             </div>
-                            <input type="number" placeholder="Phone number">
-                            <input type="text" placeholder="Select an accasion (optional)">
+                            <input type="number" placeholder="Phone number" class="phoneNumber">
+                            <input type="text" placeholder="Select an accasion">
                         </div>
                         <div class="second">
                             <input type="text" placeholder="Last name">
