--- a/front/menu/menu.html
+++ b/front/menu/menu.html
@@ -61,7 +61,7 @@
     <img src="../img/svg/Menu.svg" alt="Menu Icon" class="w-32 h-32">
   </div>
 
-  <div class="flex justify-center gap-4 mb-10">
+  <div class="catagory flex justify-center gap-4 mb-10">
     <button class="bg-[#311F09] rounded-full px-8 py-4 text-white font-semibold allCategory">All category</button>
     <button class="bg-[#D0CCC7] rounded-full px-8 py-4 font-semibold">Dinner</button>
     <button class="bg-[#D0CCC7] rounded-full px-8 py-4 font-semibold">Lunch</button>
