--- a/front/reservation/reservation.html
+++ b/front/reservation/reservation.html
@@ -134,6 +134,12 @@
         </section>
         <div class="modalFirstResv">
             <div class="group">
+                <div class="closed">
+                    <svg width="22" height="22" viewBox="0 0 22 22" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M21 0.999969L0.99995 21"  stroke-width="2" stroke-linecap="round"/>
+                        <path d="M21 21.0001L0.999951 1.00001"  stroke-width="2" stroke-linecap="round"/>
+                        </svg>                    
+                </div>
                 <div class="head">
                     <div class="logo">
                         <img src="../img/svg/LogoDeliziosoFull.svg" alt="">
@@ -200,15 +206,15 @@
                 <div class="agreements">
                     <div class="groupAgree">
                         <div class="item">
-                            <input type="checkbox" name="statedAbove" id="" >
+                            <input type="checkbox" name="statedAbove" class="stateAbove" id="" >
                             <span>I agree with what is stated above</span>
                         </div>
                         <div class="item">
-                            <input type="checkbox" name="restaurant" id="">
+                            <input type="checkbox" name="restaurant" class="newsAbove" id="">
                             <span>Sign me up to receive dining offers and news from this restaurant by email.</span>
                         </div>
                         <div class="item">
-                            <input type="checkbox" name="news" id="">
+                            <input type="checkbox" name="news" class="newsRes" id="">
                             <span>Sign me up to receive dining offers and news from this restaurant by email.</span>
                         </div>
                         <div class="confirmBtn">
@@ -226,6 +232,12 @@
 
         <div class="modalSecondResv">
             <div class="group">
+                <div class="closedSec">
+                    <svg width="22" height="22" viewBox="0 0 22 22" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M21 0.999969L0.99995 21"  stroke-width="2" stroke-linecap="round"/>
+                        <path d="M21 21.0001L0.999951 1.00001"  stroke-width="2" stroke-linecap="round"/>
+                        </svg>                    
+                </div>
                 <div class="head">
                     <div class="logo">
                         <img src="../img/svg/LogoDeliziosoFull.svg" alt="">
